fix word wrap on release notes

--- a/website/static/css/home.css
+++ b/website/static/css/home.css
@@ -42,3 +42,7 @@
 	margin-bottom: 0.5rem;
 	border: 0.3rem solid rgba(255, 0, 0, 0.25);
 }
+
+.release-notes {
+    white-space: pre-wrap;
+}
